# ESP-IDF_CMAKE_MSVC_Integration

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  board.esp32.freertos.gcc.cmake  sdkconfig
include/: dummy.txt
src/: main.cpp
